🚀 SmartPrix - Interactive Search & Scraper Integration

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/supabase-js": "^2.93.3",
+    "axios": "^1.13.4",
+    "cheerio": "^1.2.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.3",
     "lucide-react": "^0.563.0",
